# client-server-architecture

./: .travis.yml  CMakeLists.txt  README.md  watchDog.md
include/: AtomicDequeue.hpp  AtomicDequeue_impl.hpp  ClientID.hpp  JobID.hpp  JobInput.hpp  JobOutput.hpp  Server.hpp  ServerThread.hpp  Socket.hpp
src/: ClientID.cpp  JobID.cpp  JobInput.cpp  JobOutput.cpp  Server.cpp  ServerThread.cpp  Socket.cpp
test/: test_id.cpp  test_job_io.cpp  test_queue.cpp  test_server.cpp  test_server_thread.cpp  test_socket.cpp  test_system.cpp
